--- a/src/components/Room/Room.css
+++ b/src/components/Room/Room.css
@@ -1,5 +1,5 @@
 .room-post-qn-row {
-  margin: 15vh 5vw 0 5vw;
+  margin: 20vh 5vw 0 5vw;
 }
 
 #room-post-qn-group {
@@ -9,14 +9,19 @@
 }
 
 #room-post-anon-checkbox {
-  margin: 1vh 0vw 0 0;
+  margin: 0 auto 0 20px;
 }
 
   #room-post-anon-checkbox > label {
     text-align: left;
-    margin: 1vh 0 0 0;
-    padding: 0 0 0 20px;
     letter-spacing: normal;
+    display: inline;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+  }
+
+  #room-post-anon-checkbox > input[type="checkbox"] {
+    display: inline;
   }
 
 #room-responses-column {
